add html and img folder

--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <title></title>
   </head>
   <body>
-
+    <div class="container">
+      <div class="jumbotron">
+        <h1 class="display-5">Mr. Roboger's Neighborhood</h1>
+        <hr class="my-4">
+        <div class="form-group">
+          <label for="form">Please enter a number:</label>
+          <input type="form" class="form-control" id="userInput" placeholder="">
+        </div>
+        <button type="submit" button id="submit" class="btn btn-primary">Submit your number!</button>
+        <button type="submit" button id="reset" class="btn btn-success">reset</button>
+        <hr class="my-4">
+        <img src="img/Capture.JPG" id="roboRogers" alt="Robo-Rogers">
+        <img src="img/Capture2.JPG" id="roboRogers2" alt="Robo-Rogers">
+        <img src="img/Capture3.JPG" id="roboRogers3" alt="Robo-Rogers">
+        <hr class="my-4">
+        <h5 id="results"></h5>
+      </div>
+    </div>
   </body>
-</html>
+  </html>
