--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <button type="submit" button id="submit" class="btn btn-primary">Submit your number!</button>
         <button type="submit" button id="reset" class="btn btn-success">reset</button>
         <hr class="my-4">
-        <img src="img/Capture.JPG" id="roboRogers" alt="Robo-Rogers">
-        <img src="img/Capture2.JPG" id="roboRogers2" alt="Robo-Rogers">
-        <img src="img/Capture3.JPG" id="roboRogers3" alt="Robo-Rogers">
+        <img src="/img/Capture.JPG" id="roboRogers" alt="Robo-Rogers">
+        <img src="/img/Capture2.JPG" id="roboRogers2" alt="Robo-Rogers">
+        <img src="/img/Capture3.JPG" id="roboRogers3" alt="Robo-Rogers">
         <hr class="my-4">
         <h5 id="results"></h5>
       </div>
