--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <input type="form" class="form-control" id="userInput" placeholder="">
         </div>
         <button type="submit" button id="submit" class="btn btn-primary">Submit your number!</button>
+        <button type="submit" button id="submitReversed" class="btn btn-primary">Submit your number reversed!</button>
         <button type="submit" button id="reset" class="btn btn-success">reset</button>
         <hr class="my-4">
         <img src="/img/Capture.JPG" id="roboRogers" alt="Robo-Rogers">
@@ -24,6 +25,7 @@
         <img src="/img/Capture3.JPG" id="roboRogers3" alt="Robo-Rogers">
         <hr class="my-4">
         <h5 id="results"></h5>
+        <h5 id="resultsReversed"></h5>
       </div>
     </div>
   </body>
