--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <button type="submit" button id="submit" class="btn btn-primary">Submit your number!</button>
         <button type="submit" button id="submitReversed" class="btn btn-primary">Submit your number reversed!</button>
-        <button type="submit" button id="reset" class="btn btn-success">reset</button>
+        <button type="reset" button id="reset" class="btn btn-success">reset</button>
         <hr class="my-4">
         <img src="/img/Capture.JPG" id="roboRogers" alt="Robo-Rogers">
         <img src="/img/Capture2.JPG" id="roboRogers2" alt="Robo-Rogers">
