--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/jquery-3.4.1.js"></script>
-    <script src="js/scripts.js" ></script>
+    <script src="js/scripts.js"></script>
+    <script src="js/anime.min.js"></script>
     <title></title>
   </head>
   <body>
@@ -29,4 +30,5 @@
       </div>
     </div>
   </body>
-  </html>
+</html>
+
